src/app/components/navbar/navbar.component.scss
.navbar-brand{
    font-size: 26px;
}

.navbar-brand strong{
    font-weight: 600;
}

.navbar a.nav-link{
    color: white;
    border-bottom: none;
    font-size: 0.8rem;
    border-radius: 10px;
    padding-left: 1rem;
    padding-right: 1rem;
    display: flex;
}

.navbar a.nav-link:hover{
    background-color: grey;
}

.bg-dark{
    background-color: #1f1e1f !important;
}

.nav-item{
    display: flex;
    align-items: center;
    margin: 0 0.5rem;
    font-size: 16px;
    font-weight: bold;
    color: #ffffff;
}


.nav-link-text{
    font-weight: bold;
    margin: 0;
}

.search-input{
    background-color: #1f1e1f;
    border: none;
    outline: none;
    color: white;
}

// Remove "blue x" from chrome searchbar styling
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }


.searchbar{
    background-color: #1f1e1f;
    color: #ffffff;
    display: flex;
    align-items: center;
    padding-left: 0.4rem;
    border-color: #717171;
}

form:focus-within{
    box-shadow: 0 0 2pt 1pt white;    
}

.navbar-brand{
    border-bottom: none;
}

.navbar-brand:hover{
    border-bottom: none;
}

@media(max-width: 961px){
    li.nav-item{
        margin-right: 0.25rem !important;
        margin-left: 0.25rem !important;
    }
}

@media(max-width:767px){
    .nav-link-text{
        font-size: 20px;
        display: inline !important;
    }

    .nav-item{
        text-align: center;
    }

    .nav-link{
        width: 100%;
    }

    .nav-item.mr-5{
        margin-right: 0.5rem !important;
    }
}

